--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -160,6 +160,7 @@ input, select, textarea {
 
 	p {
 		margin: 0 0 2em 0;
+		font-size: 14px;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
@@ -2658,6 +2659,15 @@ input, select, textarea {
 
 			}
 
+			/* CENTER VIDEO */
+			.centerVideo{
+				margin-left: auto;
+				margin-right: auto;
+				display: block
+			}
+
+
+
 /* Spotlight */
 
 	.spotlight {
@@ -3351,7 +3361,7 @@ input, select, textarea {
 		-ms-transition: -ms-transform 0.5s ease;
 		transition: transform 0.5s ease;
 		-webkit-overflow-scrolling: touch;
-		background: #21b2a6;
+		background: #0F101B;
 		color: #ffffff;
 		height: 100%;
 		max-width: 80%;
@@ -3362,6 +3372,7 @@ input, select, textarea {
 		top: 0;
 		width: 20em;
 		z-index: 10002;
+		opacity: 0.7;
 	}
 
 		#menu ul {
